--- a/1. Overview/1. MongoDB.md
+++ b/1. Overview/1. MongoDB.md
@@ -2,7 +2,7 @@
 	
 	• Mỗi Server được gọi là 1 Cluster, 1 Cluster có nhiều Cơ sở dữ liệu, mỗi cơ sở dữ liệu có nhiều Collection (bảng), mỗi Collection có nhiều Document (dòng). Document là đối tượng Json, tùy biến theo người thiết kế.
 
-![image](1.png)
+![image](http://mongodb/Picture/1.png)
 	
 	• Là một hệ quản trị cơ sở dữ liệu mã nguồn mở và là cơ sở dữ liệu NoSQL
 	• Mọi thứ được lưu dưới dạng key: value
