--- a/1. Overview/1. MongoDB.md
+++ b/1. Overview/1. MongoDB.md
@@ -10,9 +10,9 @@
 	• Hữu ích trong việc truy vấn nhanh và scale dữ liệu theo bề ngang, vì nó lưu cái gì vào cũng đc, k cần quan tâm trong cái đấy nó có cái gì
 	• một cơ sở dữ liệu đa nền tảng, hoạt động trên các khái niệm Collection và Document, nó cung cấp hiệu suất cao, tính khả dụng cao và khả năng mở rộng dễ dàng
 
-![image](Picture/2. Cấu trúc MongoDB.png)
+![image](https://github.com/datnguyenE18/MongoDB/blob/main/Picture/2.%20C%E1%BA%A5u%20tr%C3%BAc%20MongoDB.png)
 Cấu trúc MongoDB
 
-![image](Picture/3.png)
+![image](https://github.com/datnguyenE18/MongoDB/blob/main/Picture/3.png)
 
 
