--- a/1. Overview/1. MongoDB.md
+++ b/1. Overview/1. MongoDB.md
@@ -1,14 +1,14 @@
-	• MongoDB là CSDL mã nguồn mở được viết bằng C++, là một trong những kiến trúc CSDL dùng để lưu trữ dữ liệu lớn (Big Data), hỗ trợ phân tán, dễ dàng co giãn mở rộng, tốc độ truy cập nhanh, không có ràng buộc mối quan hệ giữa các bảng.
+* MongoDB là CSDL mã nguồn mở được viết bằng C++, là một trong những kiến trúc CSDL dùng để lưu trữ dữ liệu lớn (Big Data), hỗ trợ phân tán, dễ dàng co giãn mở rộng, tốc độ truy cập nhanh, không có ràng buộc mối quan hệ giữa các bảng.
 	
-	• Mỗi Server được gọi là 1 Cluster, 1 Cluster có nhiều Cơ sở dữ liệu, mỗi cơ sở dữ liệu có nhiều Collection (bảng), mỗi Collection có nhiều Document (dòng). Document là đối tượng Json, tùy biến theo người thiết kế.
+* Mỗi Server được gọi là 1 Cluster, 1 Cluster có nhiều Cơ sở dữ liệu, mỗi cơ sở dữ liệu có nhiều Collection (bảng), mỗi Collection có nhiều Document (dòng). Document là đối tượng Json, tùy biến theo người thiết kế.
 
 ![image](https://github.com/datnguyenE18/MongoDB/blob/main/Picture/1.png)
 	
-	• Là một hệ quản trị cơ sở dữ liệu mã nguồn mở và là cơ sở dữ liệu NoSQL
-	• Mọi thứ được lưu dưới dạng key: value
-	• Không có quan hệ
-	• Hữu ích trong việc truy vấn nhanh và scale dữ liệu theo bề ngang, vì nó lưu cái gì vào cũng đc, k cần quan tâm trong cái đấy nó có cái gì
-	• một cơ sở dữ liệu đa nền tảng, hoạt động trên các khái niệm Collection và Document, nó cung cấp hiệu suất cao, tính khả dụng cao và khả năng mở rộng dễ dàng
+* Là một hệ quản trị cơ sở dữ liệu mã nguồn mở và là cơ sở dữ liệu NoSQL
+* Mọi thứ được lưu dưới dạng key: value
+* Không có quan hệ
+* Hữu ích trong việc truy vấn nhanh và scale dữ liệu theo bề ngang, vì nó lưu cái gì vào cũng đc, k cần quan tâm trong cái đấy nó có cái gì
+* Một cơ sở dữ liệu đa nền tảng, hoạt động trên các khái niệm Collection và Document, nó cung cấp hiệu suất cao, tính khả dụng cao và khả năng mở rộng dễ dàng
 
 ![image](https://github.com/datnguyenE18/MongoDB/blob/main/Picture/2.%20C%E1%BA%A5u%20tr%C3%BAc%20MongoDB.png)
 
