--- a/1. Overview/1. MongoDB.md
+++ b/1. Overview/1. MongoDB.md
@@ -12,7 +12,10 @@
 
 ![image](https://github.com/datnguyenE18/MongoDB/blob/main/Picture/2.%20C%E1%BA%A5u%20tr%C3%BAc%20MongoDB.png)
 
+<p align="center">
 Cấu trúc MongoDB
+</p>
+
 
 ![image](https://github.com/datnguyenE18/MongoDB/blob/main/Picture/3.png)
 
