--- a/1. Overview/1. MongoDB.md
+++ b/1. Overview/1. MongoDB.md
@@ -11,10 +11,7 @@
 * Một cơ sở dữ liệu đa nền tảng, hoạt động trên các khái niệm Collection và Document, nó cung cấp hiệu suất cao, tính khả dụng cao và khả năng mở rộng dễ dàng
 
 ![image](https://github.com/datnguyenE18/MongoDB/blob/main/Picture/2.%20C%E1%BA%A5u%20tr%C3%BAc%20MongoDB.png)
-
-<p align="center">
-Cấu trúc MongoDB
-</p>
+<p align="center">Cấu trúc MongoDB</p>
 
 
 ![image](https://github.com/datnguyenE18/MongoDB/blob/main/Picture/3.png)
