--- a/1. Overview/6. Document.md
+++ b/1. Overview/6. Document.md
@@ -3,6 +3,7 @@ Một Document (tương tự các row trong table ở RDBMS) trong MongoDB, có 
 Các Document có schema động, nghĩa là Document trong cùng một Collection không cần thiết phải có cùng một tập hợp các trường hoặc cấu trúc giống nhau, và các trường chung trong Document của một Collection có thể giữ các kiểu dữ liệu khác nhau.
 
 ### RDBMS và MongoDB
+![image](https://user-images.githubusercontent.com/43572616/149673246-f8914d71-e1b5-4495-aa59-0fdb573191d2.png)
 
 Ví dụ cấu trúc Document của một Blog site:
 
