Update 2. [use] Tạo DataBase.md

--- a/7. Design/2. [use] Tạo DataBase.md
+++ b/7. Design/2. [use] Tạo DataBase.md
@@ -3,12 +3,29 @@
 
 Lệnh này sẽ tạo một cơ sở dữ liệu mới, nếu nó chưa tồn tại, nếu không thì, lệnh này sẽ trả về cơ sở dữ liệu đang tồn tại.
 
-* Ví dụ muốn tạo CSDL "datnt1"
-* Xem CSDL đang chọn:
-* Xem danh sách CSDL:
-* CSDL dữ liệu datnt1 vừa tạo sẽ không có trong danh sách này, Để hiển thị nó, cần chèn ít nhất một Collection vào trong đó, ở đây chèn "movie":
+* **Ví dụ muốn tạo CSDL "datnt1"**
+
+![image](https://user-images.githubusercontent.com/43572616/149701390-a7ec0c4c-a2c4-456d-8a0c-eafdc1f194f2.png)
+##
+* **Xem CSDL đang chọn:**
+
+![image](https://user-images.githubusercontent.com/43572616/149701464-e26b0880-86c7-4248-b870-66d847ef65dc.png)
+##
+* **Xem danh sách CSDL:**
+
+![image](https://user-images.githubusercontent.com/43572616/149701488-7969044f-d1d8-4aef-ae3a-d365b929d526.png)
+##
+* **CSDL dữ liệu datnt1 vừa tạo sẽ không có trong danh sách này, Để hiển thị nó, cần chèn ít nhất một Collection vào trong đó, ở đây chèn "movie":**
 >\> db.info.insert({"name" :"Nguyen Thanh Dat" , age:21, Company: "MBAL" })
-* Xem Collection vừa thêm vào CSDL:
-* Kiểm tra lại:
-	
+
+![image](https://user-images.githubusercontent.com/43572616/149701512-abe814bc-4c87-4a20-9cbf-815c49f89f08.png)
+##
+* **Xem Collection vừa thêm vào CSDL:**
+
+![image](https://user-images.githubusercontent.com/43572616/149701523-7a688fe6-c1b7-4384-8384-1d923af352e4.png)
+##
+* **Kiểm tra lại:**
+
+![image](https://user-images.githubusercontent.com/43572616/149701532-3eef4d85-08f4-4b41-af3b-279d6c0fa5ea.png)
+##
 Trong MongoDB, cơ sở dữ liệu mặc định là test. Nếu không tạo bất kỳ cơ sở dữ liệu nào, thì các Collection sẽ được lưu trong test.
